--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.LogInFragment">
 
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
     <!-- Adding clickable attributes to the TextViews -->
 
     <TextView
@@ -66,37 +78,29 @@
         android:id="@+id/text_editProfile"
         android:layout_width="180dp"
         android:layout_height="62dp"
-        android:layout_marginTop="104dp"
         android:clickable="true"
         android:fontFamily="sans-serif-medium"
         android:onClick="onEditProfileClick"
         android:text="Edit Profile"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/text_Settings"
-        app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintHorizontal_bias="0.205"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.318" />
+        android:textColor="#99000000"
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="531dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/text_Settings"
-        android:layout_width="180dp"
-        android:layout_height="62dp"
-        android:layout_marginBottom="256dp"
+        android:layout_width="133dp"
+        android:layout_height="50dp"
         android:clickable="true"
         android:fontFamily="sans-serif-medium"
         android:onClick="onSettingsClick"
         android:text="Settings"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/logout_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.134"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="1.0" />
+        android:textColor="#99000000"
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="608dp"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/logout_button"
@@ -109,7 +113,46 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.818"
+        app:layout_constraintVertical_bias="0.881"
         tools:text="Log out" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="324dp"
+        tools:text="Username"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="382dp"
+        tools:text="Name"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#040404"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="440dp"
+        tools:text="Phone Number"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
