--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -166,7 +166,7 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/location"
         android:textColor="#020101"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -175,15 +175,12 @@
         app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="@+id/countrySpinner"
         app:layout_constraintTop_toBottomOf="@+id/genderSpinner"
-        app:layout_constraintVertical_bias="0.176"
-        tools:ignore="UnknownId"
-        tools:text="Country" />
+        app:layout_constraintVertical_bias="0.176" />
 
     <Spinner
         android:id="@+id/genderSpinner"
         android:layout_width="149dp"
         android:layout_height="64dp"
-
         android:text="@string/gender"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/countrySpinner"
@@ -192,12 +189,13 @@
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
         app:layout_constraintVertical_bias="0.541" />
 
+
     <Spinner
         android:id="@+id/countrySpinner"
         android:layout_width="308dp"
         android:layout_height="58dp"
         android:layout_marginTop="12dp"
-        android:text="Country"
+        android:text="@string/country_of_residence"
         android:textColor="#0C0606"
         app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
         app:layout_constraintEnd_toEndOf="@+id/Registerbutton"
