Hardcoded the data

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -128,7 +128,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username"
+        android:text="Lade"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -146,7 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:text="@string/name"
+        android:text="Ololade Odunsi"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -163,7 +163,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/phone_number"
+        android:text="2030006666"
         android:textColor="#040404"
         android:textSize="20sp"
         android:textStyle="bold"
